[gd_scene load_steps=21 format=3 uid="uid://cxge6rvc7mdfy"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_i1nv8"]
[ext_resource type="Texture2D" uid="uid://bn8dmeair72sr" path="res://assets/TinySword/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="1_xy6bu"]
[ext_resource type="PackedScene" uid="uid://bcdg5dqevplb4" path="res://misc/system/skull.tscn" id="2_n8uwo"]
[ext_resource type="PackedScene" uid="uid://b4r8mmefx7got" path="res://misc/system/ritual.tscn" id="3_udkri"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3uryk"]
radius = 15.0
height = 42.0

[sub_resource type="Animation" id="Animation_nelvg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_smrvo"]
resource_name = "attack-bottom"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_a5vpc"]
resource_name = "attack-bottom2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_u30vu"]
resource_name = "attack-side"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_6ccp3"]
resource_name = "attack-side-2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_j1k5d"]
resource_name = "attack-up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_ruryw"]
resource_name = "attack-up2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_5weef"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_62l68"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0wpl"]
_data = {
"RESET": SubResource("Animation_nelvg"),
"attack-bottom": SubResource("Animation_smrvo"),
"attack-bottom2": SubResource("Animation_a5vpc"),
"attack-side": SubResource("Animation_u30vu"),
"attack-side-2": SubResource("Animation_6ccp3"),
"attack-up": SubResource("Animation_j1k5d"),
"attack-up2": SubResource("Animation_ruryw"),
"idle": SubResource("Animation_5weef"),
"run": SubResource("Animation_62l68")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gmun2"]
radius = 124.036

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4amp"]
bg_color = Color(0.172549, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkw15"]
bg_color = Color(0.607843, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjgwm"]
bg_color = Color(0.223529, 0.415686, 0.933333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbadi"]
bg_color = Color(0.113725, 0.270588, 0.407843, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
script = ExtResource("1_i1nv8")
health = 50
death_prefab = ExtResource("2_n8uwo")
ritual1 = ExtResource("3_udkri")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -24)
texture = ExtResource("1_xy6bu")
hframes = 6
vframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_3uryk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t0wpl")
}
autoplay = "idle"

[node name="SwordArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(0, -21)
shape = SubResource("CircleShape2D_gmun2")
debug_color = Color(0.623529, 0.533333, 0, 0.0784314)

[node name="Ritual1Timer" type="Timer" parent="."]
wait_time = 30.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -42.0
offset_top = 18.0
offset_right = 42.0
offset_bottom = 24.0
theme_override_styles/background = SubResource("StyleBoxFlat_e4amp")
theme_override_styles/fill = SubResource("StyleBoxFlat_mkw15")
step = 1.0
value = 100.0
allow_greater = true
show_percentage = false

[node name="Ritual1Bar" type="ProgressBar" parent="."]
offset_left = -42.0
offset_top = 25.0
offset_right = 42.0
offset_bottom = 31.0
theme_override_styles/background = SubResource("StyleBoxFlat_yjgwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_lbadi")
step = 1.0
fill_mode = 1
show_percentage = false

[connection signal="timeout" from="Ritual1Timer" to="." method="_on_ritual_1_timer_timeout"]
